// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MovieCard /> 1`] = `
<div
  className="card"
  onClick={[Function]}
  style={
    Object {
      "backgroundImage": "url(https://image.tmdb.org/t/p/w500/y4MBh0EjBlMuOzv9axM4qJlmhzz.jpg)",
    }
  }
>
  <span
    className="card-label"
  >
    G
  </span>
  <div
    className="card-info"
  >
    <h2
      className="card-title"
    >
      Guardians of the Galaxy Vol. 2
    </h2>
    <p>
      Released: 
      2017-04-19
    </p>
    <div
      className="more-details"
    >
      <p
        className="movie-desc"
      >
        The Guardians must fight to keep their newfound family together as they unravel the mysteries of Peter Quill's true parentage.
      </p>
      <p>
        Voting Average: 
        7.7
      </p>
      <p>
        Total Votes: 
        11713
      </p>
      <p>
        Popuplarity: 
        45.842
        %
      </p>
      <p>
        Media Type: 
        movie
        %
      </p>
      <p>
        Language: 
        en
        %
      </p>
    </div>
  </div>
</div>
`;

exports[`<MovieCard /> 2`] = `
<div
  className="card card-expanded"
  onClick={[Function]}
  style={
    Object {
      "backgroundImage": "url(https://image.tmdb.org/t/p/w500/y4MBh0EjBlMuOzv9axM4qJlmhzz.jpg)",
    }
  }
>
  <span
    className="card-label"
  >
    G
  </span>
  <div
    className="card-info"
  >
    <h2
      className="card-title"
    >
      Guardians of the Galaxy Vol. 2
    </h2>
    <p>
      Released: 
      2017-04-19
    </p>
    <div
      className="more-details"
    >
      <p
        className="movie-desc"
      >
        The Guardians must fight to keep their newfound family together as they unravel the mysteries of Peter Quill's true parentage.
      </p>
      <p>
        Voting Average: 
        7.7
      </p>
      <p>
        Total Votes: 
        11713
      </p>
      <p>
        Popuplarity: 
        45.842
        %
      </p>
      <p>
        Media Type: 
        movie
        %
      </p>
      <p>
        Language: 
        en
        %
      </p>
    </div>
  </div>
</div>
`;
